Changes to Link
Image changed to GitHub logo (see ./images/GitHub-logo.png)
Image moved to bottom corner of popup
Popup expanded to accommodate for the GitHub button and footer
Background color changed to gray
Footer may now contain text for other informational purposes
All img elements use 0 margins by default
Added placeholder text in body and margin of popup

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,12 +1,35 @@
 html {
   width: 200px;
-  height: 200px;
-  background: lightblue;
+  height: 250px;
+  background: lightgray;
 }
 
-.center {
+img {
+  margin: 0px 0px;
+}
+
+.social {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.body {
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;
+}
+
+.footer {
+  height: 50px;
+  width: 200px;
+}
+.footer p {
+  position: absolute; 
+  left: 0px; 
+  bottom: 0px;
+  margin: 0px 0px;
 }
