--- a/frontend/src/scripts/highlighter/highlighter.css
+++ b/frontend/src/scripts/highlighter/highlighter.css
@@ -1,9 +1,7 @@
 .hover-highlight {
-  outline: 2px solid red; /* Change color as needed */
-  background-color: rgba(255, 0, 0, 0.1);
-  transition: background-color 0.2s ease-in-out;
-}
-
+   background-color: rgba(167, 197, 196, 0.1); transition: background-color 0.5s ease-in-out;
+   }
+   
 .curio-popup {
   position: fixed;
   top: 20px;
